<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Wormgame">

    <Button
        android:id="@+id/score2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:text="@string/button_score_name"
        app:layout_constraintBottom_toTopOf="@+id/lilu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </Button>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="390dp"
        android:layout_height="390dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">



        <Button
            android:id="@+id/score"
            android:background="@color/black"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="140dp"
            android:textSize="15dp"
            android:text="@string/button_gameover_name">
        </Button>



        <Button
            android:id="@+id/new_game"
            android:background="@color/purple_700"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="130dp"
            android:layout_marginTop="130dp"
            android:text="@string/button_newgame_name">

        </Button>

        <Button
            android:id="@+id/resume"
            android:background="@color/purple_700"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_game"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="130dp"
            android:layout_marginTop="10dp"
            android:text="@string/button_resume_name">

        </Button>

        <Button
            android:id="@+id/playagain"
            android:background="@color/red"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_height="80dp"
            android:layout_below="@id/resume"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="120dp"
            android:layout_marginTop="60dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/button_gameover_name">

        </Button>

        <RelativeLayout
            android:id="@+id/board"
            android:layout_width="380dp"
            android:layout_height="380dp"
            android:background="@color/black"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            tools:ignore="MissingConstraints">


        </RelativeLayout>


    </RelativeLayout>



    <LinearLayout
        android:id="@+id/lilu"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/up"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/button_up_name"></Button>

        </LinearLayout>



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/left"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/button_left_name"></Button>

            <Button
                android:id="@+id/pause"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/button_pause_name"></Button>

            <Button
                android:id="@+id/right"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/button_right_name"></Button>

        </LinearLayout>



        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <Button
                android:id="@+id/down"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/button_down_name"></Button>

        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>